--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -15,55 +15,71 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mop-Fi-yGI">
-                                <rect key="frame" x="132.33333333333334" y="52.000000000000007" width="110.66666666666666" height="83.666666666666686"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="value" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3DY-7J-fgA">
+                                <rect key="frame" x="109.66666666666669" y="52" width="156" height="84"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="fahrenheitFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="9zD-gE-f03"/>
+                                </connections>
+                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C52-uZ-8nh">
-                                <rect key="frame" x="39.666666666666657" y="143.66666666666666" width="296" height="43"/>
+                                <rect key="frame" x="39.666666666666657" y="144" width="296" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9il-oU-bmr">
-                                <rect key="frame" x="130.66666666666666" y="194.66666666666666" width="114" height="43"/>
+                                <rect key="frame" x="130.66666666666666" y="195" width="114" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JzC-os-qTm">
-                                <rect key="frame" x="129" y="245.66666666666663" width="117" height="84"/>
+                                <rect key="frame" x="129" y="246" width="117" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celcius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg6-qA-qKs">
-                                <rect key="frame" x="64" y="337.66666666666669" width="247" height="43"/>
+                                <rect key="frame" x="64" y="338" width="247" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="C52-uZ-8nh" firstAttribute="centerX" secondItem="mop-Fi-yGI" secondAttribute="centerX" id="IBH-hd-Mza"/>
-                            <constraint firstItem="mop-Fi-yGI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Yp9-NH-sfp"/>
-                            <constraint firstItem="C52-uZ-8nh" firstAttribute="top" secondItem="mop-Fi-yGI" secondAttribute="bottom" constant="8" id="awm-PM-Obo"/>
-                            <constraint firstItem="9il-oU-bmr" firstAttribute="centerX" secondItem="mop-Fi-yGI" secondAttribute="centerX" id="fyB-KZ-QoM"/>
+                            <constraint firstItem="9il-oU-bmr" firstAttribute="centerX" secondItem="C52-uZ-8nh" secondAttribute="centerX" id="4Rt-rn-yth"/>
+                            <constraint firstItem="gg6-qA-qKs" firstAttribute="centerX" secondItem="C52-uZ-8nh" secondAttribute="centerX" id="8Ab-P6-fs2"/>
+                            <constraint firstItem="C52-uZ-8nh" firstAttribute="top" secondItem="3DY-7J-fgA" secondAttribute="bottom" constant="8" id="9of-6G-RmS"/>
+                            <constraint firstItem="3DY-7J-fgA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="BHj-K8-tbC"/>
+                            <constraint firstItem="3DY-7J-fgA" firstAttribute="centerX" secondItem="C52-uZ-8nh" secondAttribute="centerX" id="PDv-eZ-9O5"/>
+                            <constraint firstItem="JzC-os-qTm" firstAttribute="centerX" secondItem="C52-uZ-8nh" secondAttribute="centerX" id="bUp-CP-97M"/>
+                            <constraint firstItem="3DY-7J-fgA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jDw-Xs-7xh"/>
                             <constraint firstItem="JzC-os-qTm" firstAttribute="top" secondItem="9il-oU-bmr" secondAttribute="bottom" constant="8" id="ldt-nz-vl3"/>
-                            <constraint firstItem="gg6-qA-qKs" firstAttribute="centerX" secondItem="mop-Fi-yGI" secondAttribute="centerX" id="nw8-0r-ywY"/>
-                            <constraint firstItem="mop-Fi-yGI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="sgK-yd-Lhl"/>
                             <constraint firstItem="gg6-qA-qKs" firstAttribute="top" secondItem="JzC-os-qTm" secondAttribute="bottom" constant="8" id="spd-Og-ek7"/>
-                            <constraint firstItem="JzC-os-qTm" firstAttribute="centerX" secondItem="mop-Fi-yGI" secondAttribute="centerX" id="tQr-Dd-0mM"/>
                             <constraint firstItem="9il-oU-bmr" firstAttribute="top" secondItem="C52-uZ-8nh" secondAttribute="bottom" constant="8" id="v7o-nw-z51"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="6jU-If-fDd" appends="YES" id="sso-EI-MAL"/>
+                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Convert" image="ConvertIcon" id="d1r-m8-JiY"/>
+                    <connections>
+                        <outlet property="celsiusLabel" destination="JzC-os-qTm" id="hor-FJ-x12"/>
+                        <outlet property="textField" destination="3DY-7J-fgA" id="L9W-tZ-ls4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="6jU-If-fDd">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="BYZ-38-t0r" id="ALm-Kx-Rwx"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2114" y="-183"/>
         </scene>
@@ -83,6 +99,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="AKm-Sz-Jsv" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YMe-I9-kGe">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
